--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tempfile = "3.20.0"
 tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
 
 [features]
-default = ["sha", "md5", "indicatif"]
+default = ["sha", "md5"]
 sha = ["dep:sha1", "dep:sha2", "dep:hex"]
 md5 = ["dep:md5", "dep:hex"]
 indicatif = ["dep:indicatif"]
