--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ zip = "0.6"
 sha1 = { version = "0.10.6", optional = true }
 sha2 = { version = "0.10.9", optional = true }
 md5 = { version = "0.8.0", optional = true }
-hex = { version = "0.4.3", optional = true }
+hex = { version = "0.4.3" }
 
 [profile.release]
 opt-level = "z"           # optimiza para tamaño
@@ -30,6 +30,7 @@ tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
 
 [features]
 default = ["sha", "md5"]
-sha = ["dep:sha1", "dep:sha2", "dep:hex"]
-md5 = ["dep:md5", "dep:hex"]
+sha = ["dep:sha1", "dep:sha2"]
+md5 = ["dep:md5"]
 indicatif = ["dep:indicatif"]
+
