--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ md5 = { version = "0.8.0", optional = true }
 hex = { version = "0.4.3" }
 infer = { version = "0.19.0", optional = true }
 xz2 = { version = "0.1.7", optional = true }
+tempfile = "3.20.0"
 
 [profile.release]
 opt-level = "z"           # optimiza para tamaño
@@ -31,7 +32,7 @@ tempfile = "3.20.0"
 tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
 
 [features]
-default = ["sha", "md5", "zip", "targz"]
+default = ["sha", "md5", "zip", "targz", "indicatif", "tarxz"]
 sha = ["dep:sha1", "dep:sha2"]
 md5 = ["dep:md5"]
 indicatif = ["dep:indicatif"]
