--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,28 +2,47 @@
 name = "dwutil"
 version = "0.1.0"
 edition = "2024"
+description = "simple and easy use downloader"
+license = "MIT"
+author = ["prefix63 <prefix6@outlook.es>"]
+readme = "README.md"
+repository = "https://github.com/prefix63/dwutil"
+categories = ["multimedia", "command-line-interface", "command-line-utilities"]
+keywords = ["download", "cli", "assets", "command-line-interface", "resources"]
 
 [dependencies]
+# For request the resources
 ureq = "2.9"
+# Logger
 tracing = "0.1"
+# Convert hash to string
+hex = { version = "0.4.3" }
+# Generate tempfiles on stores
+tempfile = "3.20.0"
+
+# Indicatif progress bar
 indicatif = { version = "0.17", optional = true }
-flate2 = { version = "1.0", features = ["rust_backend"], optional = true } # evita dependencias nativas
+# Gzip decompresion
+flate2 = { version = "1.0", features = ["rust_backend"], optional = true }
+# XZ decompression
+xz2 = { version = "0.1.7", optional = true }
+# Tar.* decompression
 tar = { version = "0.4", optional = true }
+# Zip decompression
 zip = { version = "0.6", optional = true }
+# Hashers
 sha1 = { version = "0.10.6", optional = true }
 sha2 = { version = "0.10.9", optional = true }
 md5 = { version = "0.8.0", optional = true }
-hex = { version = "0.4.3" }
+# Check if the file is a compression format
 infer = { version = "0.19.0", optional = true }
-xz2 = { version = "0.1.7", optional = true }
-tempfile = "3.20.0"
 
 [profile.release]
-opt-level = "z"           # optimiza para tamaño
-lto = true                # link time optimization
-codegen-units = 1         # más tiempo de compilación, menor tamaño
-panic = "abort"           # elimina info de unwinding
-strip = "symbols"         # remueve símbolos de depuración
+opt-level = "z"           
+lto = true                
+codegen-units = 1        
+panic = "abort"           
+strip = "symbols"         
 
 [dev-dependencies]
 sha1 = "0.10.6"
@@ -32,6 +51,11 @@ tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
 
 [features]
 default = ["sha", "md5", "zip", "targz", "indicatif", "tarxz"]
+
+full-decoders = ["zip", "targz", "tarxz"]
+full-hashers = ["sha", "md5"]
+full = ["full-decoders", "full-hashers", "indicatif"]
+
 sha = ["dep:sha1", "dep:sha2"]
 md5 = ["dep:md5"]
 indicatif = ["dep:indicatif"]
